--- a/.hintrc
+++ b/.hintrc
@@ -17,6 +17,12 @@
           "iframe[allow]"
         ]
       }
+    ],
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off"
+      }
     ]
   }
 }
