--- a/.hintrc
+++ b/.hintrc
@@ -23,6 +23,12 @@
       {
         "button-name": "off"
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
     ]
   }
 }
